--- a/MusicCatalog/MusicCatalogAPI/MusicCatalogAPI.csproj
+++ b/MusicCatalog/MusicCatalogAPI/MusicCatalogAPI.csproj
@@ -8,5 +8,10 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
+  </ItemGroup>
+
 
 </Project>
