--- a/MusicCatalog/MusicCatalogAngular/angular.json
+++ b/MusicCatalog/MusicCatalogAngular/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -65,7 +66,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "MusicCatalogAngular:build"
+            "browserTarget": "MusicCatalogAngular:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
